# code-examples

./: README.md
django-angular/angular-frontend/: bun.lockb  package.json
django-angular/angular-frontend/src/: index.html
django-angular/angular-frontend/src/app/: app.component.ts  app.routes.ts  (+1 more)
django-angular/api/: Makefile  README.md  manage.py  pyproject.toml
django-angular/api/api/: settings.py  urls.py  views.py
django-angular/api/api/migrations/: 0001_initial.py  0002_alter_usermodel_id.py
django-angular/api/apiexample/: manage.py
django-angular/api/apiexample/apiexample/: models.py  serializers.py  settings.py  urls.py
django-angular/api/apiexample/apiexample/migrations/: 0002_alter_usermodel_id.py
django-fastapi/: Makefile
django-fastapi/backend/: Makefile  pyproject.toml  requirements.txt
django-fastapi/frontend/: Makefile  package.json
django-fastapi/frontend/src/: App.tsx
django-fastapi/micro-service/: Makefile  main.py  pyproject.toml
fastapi-poetry/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
performance-test/: docker-compose.yml
performance-test/actix-web-rest/: Dockerfile
performance-test/actix-web-rest/actix-web-demo/: Cargo.toml
performance-test/benchmark/: locustfile.py  pyproject.toml
performance-test/django-rest/: Dockerfile  pyproject.toml
performance-test/django-rest/drf_project/: Dockerfile  requirements.txt
performance-test/fastapi-rest/: Dockerfile  main.py  pyproject.toml
performance-test/robyn-rest/: Dockerfile  app.py  pyproject.toml  requirements.txt
prefect-uv/: hello.py  my_first_flow.py  pyproject.toml
(+15 files in other folders)
