[tool.poetry]
name = "fastapi example with python poetry"
version = "0.1.0"
description = "An example of a python poetry project with FastAPI."
authors = ["Oliver Holmes <oliver.albert.holmes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.0"
black = "^24.2.0"
pytest = "^8.1.0"
pytest-cov = "^4.1.0"
httpx = "0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
