[tool.poetry]
name = "django api"
version = "0.1.0"
description = ""
authors = ["Oliver Holmes <oliver.albert.holmes@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.3"
djangorestframework = "^3.15.1"
django-cors-headers = "^4.3.1"
requests = "^2.31.0"
django-rest-swagger = "^2.2.0"
drf-yasg = "^1.21.7"
setuptools = "^69.2.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
