[project]
name = "micro-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=44.0.1",
    "fastapi>=0.115.8",
    "pyjwt>=2.10.1",
    "python-jose[cryptography]>=3.3.0",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
    "websockets>=14.2",
]
